@@ -213,8 +213,9 @@ t/1613_import_multipage_TIFF.t
 t/1621_import_pdf.t
 t/1622_import_multipage_PDF.t
 t/1623_import_multipage_PDF2.t
-t/1624_import_pdf_bw.t
-t/1625_import_PDF_with_error.t
+t/1624_import_multipage_PDF3.t
+t/1625_import_pdf_bw.t
+t/1626_import_PDF_with_error.t
 t/1631_import_ppm.t
 t/1632_import_ppm_with_error.t
 t/1641_import_png.t
