@@ -8,6 +8,9 @@
   (Gscan2pdf problem with unpaper 6.2) and Debian bug #807565
   (Unpaper error dialog cannot be hidden permanently)
 * Ensure that process numbering is properly reinitialised when queue is empty.
+* Fixed error importing PDF with more than 999 pages. However, this exposed the
+  problem that each page is held as an open temporary file and that the system
+  can run out of file handles somewhere after 1000.
 
 
 1.3.6 (20.12.2015):
